finalizing angular tutorials

--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -8,4 +8,5 @@
   </div>
 </div> 
 <hr>
-<button (click)="goBack()">Back</button>
+<button (click)="goBack()">Back</button> &nbsp;
+<button (click)="save()">save</button> 
